# ParaView-SZ3Reader

./: CLAUDE.md  CMakeLists.txt  README.md
Reader/: CMakeLists.txt  vtkSZ3Reader.cxx  vtkSZ3Reader.h
Reader/SZ3Compat/: CMakeLists.txt
Reader/SZ3Compat/cmake/: FetchSZ3Versions.cmake
Reader/SZ3Compat/include/sz3_compat/: sz3_compat.hpp
Reader/SZ3Compat/src/: sz3_compat_dynamic.cpp
Reader/SZ3Compat/src/plugins/: plugin_interface.h  sz3_v302_plugin.cpp  sz3_v317_plugin.cpp  sz3_v320_plugin.cpp  sz3_v321_plugin.cpp  sz3_v330_plugin.cpp  sz3_v332_plugin.cpp
Reader/SZ3Multi/: CMakeLists.txt  SZ3VersionDispatcher.h
Reader/SZ3Multi/templates/: SZ3VersionDispatcher.cpp.in  sz3_impl.cpp.in  sz3_wrapper.hpp.in
